# brain_box

./: .gitignore  README.md  analysis.md  config.yaml  pyproject.toml
brain_box/: __init__.py  main.py
brain_box/api/: __init__.py  models.py  routes.py
brain_box/communication/: __init__.py  mavlink_comm.py  registry.py
brain_box/config/: __init__.py  settings.py
brain_box/core/: __init__.py  algorithm.py  device.py
brain_box/drone/: __init__.py  manager.py
brain_box/edge/: __init__.py  client.py  reporter.py
brain_box/logging_config/: __init__.py  logger.py
brain_box/navigation/: __init__.py  registry.py  service.py  simple_nav.py
brain_box/storage/: database.py
docs/: API_REFERENCE.md
src/features/brainBox/v0_0_0/: brainBox.py  main.py
src/features/brainBox/v0_0_0/config/: __init__.py  settings.py  tool_cfg.json
src/features/brainBox/v0_0_0/core/: __init__.py  drone_manager.py  edge_reporter.py  manager.py  mavlink_comm.py  navigation_service.py  protocol_registry.py
src/features/brainBox/v0_0_0/models/: __init__.py  algorithm.py  device.py
src/features/brainBox/v0_0_0/storage/: database.py
src/features/brainBox/v0_0_0/utils/: logger.py
tests/: test_api.py  test_config.py  test_drone_manager.py  test_navigation.py
tools/: drone_simulator.py
